@@ -2,6 +2,7 @@ serd (0.31.0) unstable; urgency=medium
 
   * Add Windows path separator support to serd_node_new_file_uri()
   * Add serd_reader_skip_until_byte() to public API
+  * Allow SERD_API to be defined by the user
   * Avoid creating test files in the current directory
   * Clean up code
   * Fix crash when trying to read chunks without starting
@@ -13,7 +14,7 @@ serd (0.31.0) unstable; urgency=medium
   * Replace duplicated dox_to_sphinx script with sphinxygen dependency
   * Test header for warnings more strictly
 
- -- David Robillard <d@drobilla.net>  Sun, 11 Dec 2022 16:36:39 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 19 Dec 2022 23:55:26 +0000
 
 serd (0.30.16) stable; urgency=medium
 
